examples/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: altcha
  labels:
    app: altcha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: altcha
  template:
    metadata:
      labels:
        app: altcha
    spec:
      containers:
      - name: altcha
        image: docker.io/rayshoo/altcha:latest
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: demo
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/live
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
