examples/k8s/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: altcha-dashboard
spec:
  type: ClusterIP
  selector:
    app: altcha-dashboard
  ports:
  - port: 9000
    targetPort: http
    name: http
