examples/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: altcha
  labels:
    app: altcha
spec:
  type: ClusterIP
  selector:
    app: altcha
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
